--- a/1v1-lol.html
+++ b/1v1-lol.html
@@ -23,7 +23,7 @@ Home</a>
 <div>
 &nbsp;
 
-  <p><iframe style="border: none;" src="https://unblocked1v1-lol.w3spaces.com/" name="iFrame Name" width="100%" height="100%" scrolling="Yes" allowfullscreen="yes"></iframe></p>
+  <p><iframe style="border: none;" src="https://docs-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/ko1ov/to@1e8a949f89fcf2b110640c41a0705db01405d161/d7uf4.xml&quot" name="iFrame Name" width="100%" height="100%" scrolling="Yes" allowfullscreen="yes"></iframe></p>
   
 
 
