--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </nav>
 
 <div id="Header" style="text-align: right;">What motivates us?</div>
-<div id="subHeader" style="text-align: right; font-size: 25px"><img src="Images/cruz.jpg" alt="Kids playing our website" style="float:left;width:400px;height:400px;">
+<div id="subHeader" style="text-align: right; font-size: 25px"><img src="Images/Picsart_22-03-11_21-03-57-336.jpg" alt="Kids playing our website" style="float:left;width:400px;height:400px;">
 This question has always stumped us because no matter how much I work, I never find a reason for it.
 While I do like making people happy and curing boredom, these aren't my only motives.
 Web development is something that I generally enjoy and being able to help others while doing something I love is amazing!
