--- a/games.html
+++ b/games.html
@@ -38,6 +38,10 @@
 </a>
 &nbsp;
 <div>
+<a href="chatroom.html"><img src="Images/Lga Chat (Chatroom).png" alt="Fnaf" style="width:728;height:90px;border-radius:40px">
+    </a>
+&nbsp;
+<div>
 <a href="Friday-night-funkin.html"><img src="Images/Friday-night-funkin.png" alt="Friday night funkin" style="width:200px;height:200px;border-radius:40px">
 </a>
 &nbsp;
